2003-04-11  Michael Checky  <Michael_Checky@Thermoking.com>

	* cdl/freebsd_net.cdl: Deleted the 'CYGPKG_NET_FREEBSD_STACK_BUILD_TESTS'
	component because these tests are in the net.cdl component
	'CYGPKG_NET_BUILD_TESTS' and selecting this option in freebsd_net.cdl
	causes build errors.

2003-03-14  Nick Garnett  <nickg@balti.calivar.com>

	* src/ecos/support.c: Added function cyg_net_show_mbufs() and code
	in cyg_net_mbuf_alloc() to accumulate and optionally display
	information about the current set of mbufs. This is mostly a
	debugging feature and is disabled by default.

	* include/sys/mbuf.h: Added prototype for cyg_net_show_mbufs().

2003-03-14  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/net/if.c (if_attach): Removed printf which causes the
	ethernet device to become corrupt. At this point the app driver
	has started but not completed taking over from the redboot
	driver. It is unsafe for redboot to use the ethernet device.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/freebsd_net.cdl: Fix doc link.

2003-02-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/freebsd_net.cdl: Remove unused NBPFILTER and BRIDGE CDL options.

2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/freebsd.sgml: new_net template is now just "net".

2003-02-12  Jani Monoses  <jani@iv.ro>

	* src/sys/kern/sockio.c: bsd_getinfo/bsd_setinfo should have
	void * args. Silences warnings.
	* src/sys/kern/uipc_socket.c (sopoll): Use __FUNCTION__ correctly
	for GCC 3.x.
	* src/sys/net/if_ethersubr.c: Put comments for stuff after endifs
	to silence warnings.
	* src/sys/net/if_loop.c: Ditto.

2003-02-04  Gary Thomas  <gary@mlbassoc.com>

	* include/sys/bsdtypes.h: Workaround when building with new
	Linux compatability package (which over-defines some symols
	defined in this module).

2002-12-03  Gary Thomas  <gthomas@ecoscentric.com>

	* src/ecos/support.c (show_network_tables): New function to
	print information about network tables (interfaces, routing).
