@@ -5,6 +5,14 @@
 	'CYGPKG_NET_BUILD_TESTS' and selecting this option in freebsd_net.cdl
 	causes build errors.
 
+2003-04-05  Andrew Lunn  <andrew.lunn@ascom.ch>
+
+	* src/ecos/support.c (_show_ifp): Now understands IPv6 
+	addresses and network masks and added a few more flags
+	* src/sys/net/route.c (rt_reinit_rtdelete): Only delete IPv4
+	routes so that DHCP and BOOTP works and leave IPv6 routes so IPv6
+	also keeps working.
+
 2003-03-14  Nick Garnett  <nickg@balti.calivar.com>
 
 	* src/ecos/support.c: Added function cyg_net_show_mbufs() and code
